Avoid calling VEA::Destroy() in VideoTrackRecorder

The default deleter for VEA calls Destroy() by default[0]. Running it multiple times can
cause a crash, see bug.
[0] https://cs.chromium.org/chromium/src/media/video/video_encode_accelerator.h?rcl=2fcbfb2e0189ffdc25f575f2fba4b2ef9db9814d [formerly 575512843787644524196d04076a59ec9415cb89]&l=186

BUG=701450
TEST=Fixes the crash described in the bug.

Review-Url: https://codereview.chromium.org/2753593002
Cr-Commit-Position: refs/heads/master@{#456851}

Former-commit-id: 98557de3bc84264df66670ca5baa7e0765f2186f